force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Meter_Installed__c.field-meta.xml
<CustomField>
    <fullName>EYI_Meter_Installed__c</fullName>
    <label>Meter Installed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>