force-app/main/default/objects/EYI_Inventory__c/fields/EYI_MSEB_Charges__c.field-meta.xml
<CustomField>
    <fullName>EYI_MSEB_Charges__c</fullName>
    <description>It will store MSEB Charges of inventory.</description>
    <label>MSEB Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>