force-app/main/default/objects/EYI_Inventory__c/fields/EYI_MSEB_Consumer_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_MSEB_Consumer_No__c</fullName>
    <label>MSEB Consumer No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>