force-app/main/default/objects/EYI_Inventory__c/fields/EYI_MSEB_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_MSEB_Remarks__c</fullName>
    <label>MSEB Remarks</label>
    <type>TextArea</type>
</CustomField>