force-app/main/default/objects/EYI_Inventory__c/fields/EYI_OC_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_OC_Number__c</fullName>
    <label>OC Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>