force-app/main/default/objects/EYI_Inventory__c/fields/EYI_OC_Received__c.field-meta.xml
<CustomField>
    <fullName>EYI_OC_Received__c</fullName>
    <formula>NOT(ISBLANK( EYI_OC_Received_Date__c ))</formula>
    <label>OC Received</label>
    <type>Checkbox</type>
</CustomField>