force-app/main/default/objects/EYI_Inventory__c/fields/EYI_OC_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_OC_Received_Date__c</fullName>
    <label>OC Received Date</label>
    <type>Date</type>
</CustomField>