force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Open_Balcony_Area_in_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Open_Balcony_Area_in_Sq_Ft__c</fullName>
    <label>Open Balcony Area in Sq Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>