force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Overhead_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Overhead_Area__c</fullName>
    <label>Overhead Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>