force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Overhead_Ter_Pent_sq_Meter__c.field-meta.xml
<CustomField>
    <fullName>EYI_Overhead_Ter_Pent_sq_Meter__c</fullName>
    <label>Overhead Ter (Pent) Sq. Mtr</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>