force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Parking_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Count__c</fullName>
    <label>Parking Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>