force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Parking_Location__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Location__c</fullName>
    <label>Parking Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking - Basement</fullName>
            </value>
            <value>
                <fullName>Parking - Podium</fullName>
            </value>
            <value>
                <fullName>Parking - Ground</fullName>
            </value>
            <value>
                <fullName>Parking - Open</fullName>
            </value>
            <value>
                <fullName>Parking - Stilt</fullName>
            </value>
            <value>
                <fullName>MLCP – Stilt Floor</fullName>
            </value>
            <value>
                <fullName>MLCP - 1st Floor</fullName>
            </value>
            <value>
                <fullName>MLCP – 2nd Floor</fullName>
            </value>
            <value>
                <fullName>MLCP - 3rd Floor</fullName>
            </value>
            <value>
                <fullName>MLCP - 1st Podium</fullName>
            </value>
            <value>
                <fullName>MLCP - 2nd Podium</fullName>
            </value>
            <value>
                <fullName>MLCP 2 -Lower Ground</fullName>
            </value>
            <value>
                <fullName>MLCP 2 -Upper Ground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>