force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Parking_Size__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Size__c</fullName>
    <label>Parking Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking - Regular</fullName>
            </value>
            <value>
                <fullName>Parking - Small</fullName>
            </value>
            <value>
                <fullName>Parking- Specially Abled</fullName>
            </value>
            <value>
                <fullName>Parking - Tandem</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>