force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parking - Conventional</fullName>
            </value>
            <value>
                <fullName>Parking - Electrical Veh.</fullName>
            </value>
            <value>
                <fullName>Parking - Stack</fullName>
            </value>
            <value>
                <fullName>Parking - Puzzle</fullName>
            </value>
            <value>
                <fullName>Parking - BIG</fullName>
            </value>
            <value>
                <fullName>Parking - Big &amp; Small</fullName>
            </value>
            <value>
                <fullName>Parking - MLCP</fullName>
            </value>
            <value>
                <fullName>Parking - Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>