force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Porch_Area_in_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>EYI_Porch_Area_in_Sq_Mtr__c</fullName>
    <label>Porch Area in Sq. Mtr</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>