force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Private_Lobby__c.field-meta.xml
<CustomField>
    <fullName>EYI_Private_Lobby__c</fullName>
    <label>Private Lobby</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>