force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Property_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Property_Status__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Owner</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>