force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Registration_Number__c</fullName>
    <formula>EYI_Opportunity__r.EYI_Registration_Number__c</formula>
    <label>Registration Number</label>
    <type>Text</type>
</CustomField>