force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Release_Date__c</fullName>
    <formula>EYI_Reserver_Date__c + ( EYI_Project__r.EYI_Release_Unit_Hours__c /24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Date</label>
    <type>DateTime</type>
</CustomField>