force-app/main/default/objects/EYI_Inventory__c/fields/EYI_RERA_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RERA Applicable</label>
    <type>Checkbox</type>
</CustomField>