force-app/main/default/objects/EYI_Inventory__c/fields/EYI_RERA_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Carpet_Area__c</fullName>
    <label>RERA Carpet Area</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>