force-app/main/default/objects/EYI_Inventory__c/fields/EYI_RERA_Carpet_Area_with_2_Decimal__c.field-meta.xml
<CustomField>
    <fullName>EYI_RERA_Carpet_Area_with_2_Decimal__c</fullName>
    <formula>FLOOR(EYI_RERA_Carpet_Area_Sq_mt__c  * 100) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RERA Carpet Area with 2 Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>