force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Resale__c.field-meta.xml
<CustomField>
    <fullName>EYI_Resale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale</label>
    <type>Checkbox</type>
</CustomField>