force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Reserver_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reserver_Date__c</fullName>
    <label>Reserver Date</label>
    <type>DateTime</type>
</CustomField>