force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Sale__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sale__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sale</label>
    <type>Checkbox</type>
</CustomField>