force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Saleable_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Saleable_Area_Sq_mt__c</fullName>
    <formula>EYI_Saleable_Area__c  * 0.09290304</formula>
    <label>Saleable Area (Sq mt)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>