force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Sales_organization__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_organization__c</fullName>
    <label>Sales organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EYI Properties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>