force-app/main/default/objects/EYI_Inventory__c/fields/EYI_SAP_Material_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Material_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Material Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>