force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Shop_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Shop_No__c</fullName>
    <label>Shop No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>