force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Sit_Out_In_SQ_Meter__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sit_Out_In_SQ_Meter__c</fullName>
    <label>Sit Out In Sq. Mtr</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>