force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Stamp_Duty_Paid__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stamp_Duty_Paid__c</fullName>
    <formula>IF( ISPICKVAL( EYI_Opportunity__r.EYI_SD_Status__c , &apos;SD received&apos;), true, false)</formula>
    <label>Stamp Duty Paid</label>
    <type>Checkbox</type>
</CustomField>