force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Super_Built_up_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Super_Built_up_Area__c</fullName>
    <label>Super Built-Up Area</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>