force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Classification__c</fullName>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taxable</fullName>
            </value>
            <value>
                <fullName>GST Exempted</fullName>
            </value>
            <value>
                <fullName>OC Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>