force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Terrace_Area_Sq_mt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Terrace_Area_Sq_mt__c</fullName>
    <formula>VALUE(EYI_Terrace_Area__c) * 0.09290304</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terrace Area (Sq mt)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>