force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Total_4_Wheeler_Parking_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_4_Wheeler_Parking_Value__c</fullName>
    <label>Total 4 Wheeler Parking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>