force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Total__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total__c</fullName>
    <description>It will calculate Market Value + 4 Wheeler Parking Value +  MSEB Charges</description>
    <formula>EYI_Market_Value__c  +  EYI_Total_4_Wheeler_Parking_Value__c +  EYI_MSEB_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>