force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Total_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Area__c</fullName>
    <description>It will calculate total area. Carpet Area + Built-up area</description>
    <formula>ROUND(EYI_Carpet_Area__c + (EYI_Carpet_Area__c * 0.20), 0) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>