force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Tower__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EYI_Tower__c.EYI_SubProject_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.EYI_SubProject__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Tower__c</referenceTo>
    <relationshipLabel>Inventories</relationshipLabel>
    <relationshipName>Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>