force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Two_Wheeler_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Two_Wheeler_Count__c</fullName>
    <label>Two Wheeler Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>