force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <isActive>false</isActive>
                <label>Maintenance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>