force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Unit_Available_for__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Available_for__c</fullName>
    <label>Unit Available for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sale</fullName>
                <default>true</default>
                <label>Sale</label>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>