force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_No__c</fullName>
    <label>Unit No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>