force-app/main/default/objects/EYI_Inventory__c/fields/EYI_Unit_Sold__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Sold__c</fullName>
    <label>Unit Sold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>