force-app/main/default/objects/EYI_Inventory__c/fields/EYI_UOM__c.field-meta.xml
<CustomField>
    <fullName>EYI_UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Square foot</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
                <isActive>false</isActive>
                <label>Each</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>