force-app/main/default/objects/EYI_Inventory__c/fields/EYI_View_based_on_Amenities__c.field-meta.xml
<CustomField>
    <fullName>EYI_View_based_on_Amenities__c</fullName>
    <label>View based on Amenities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amenity Facing</fullName>
            </value>
            <value>
                <fullName>City &amp; Partial Lagoon View</fullName>
            </value>
            <value>
                <fullName>City and Landscap View</fullName>
            </value>
            <value>
                <fullName>City View</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Corner Premium</fullName>
            </value>
            <value>
                <fullName>Corner Super Premium</fullName>
            </value>
            <value>
                <fullName>Corner Super Ultra Premium</fullName>
            </value>
            <value>
                <fullName>Corner Ultra Premium</fullName>
            </value>
            <value>
                <fullName>Eden-Villa</fullName>
            </value>
            <value>
                <fullName>Garden-Villa</fullName>
            </value>
            <value>
                <fullName>Lagoon View</fullName>
            </value>
            <value>
                <fullName>Partial Lagoon View</fullName>
            </value>
            <value>
                <fullName>Partial Sea View</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>River &amp; Partial Lagoon View</fullName>
            </value>
            <value>
                <fullName>River View</fullName>
            </value>
            <value>
                <fullName>Road Facing</fullName>
            </value>
            <value>
                <fullName>Sea Facing Premium</fullName>
            </value>
            <value>
                <fullName>Sea View</fullName>
            </value>
            <value>
                <fullName>Sunrise-Villa</fullName>
            </value>
            <value>
                <fullName>Super Premium</fullName>
            </value>
            <value>
                <fullName>Ultra Premium</fullName>
            </value>
            <value>
                <fullName>Waterfall-Villa</fullName>
            </value>
            <value>
                <fullName>Water-Villa</fullName>
            </value>
            <value>
                <fullName>Sea Facing</fullName>
            </value>
            <value>
                <fullName>Partial Sea Facing</fullName>
            </value>
            <value>
                <fullName>Amenities Facing</fullName>
                <isActive>false</isActive>
                <label>Amenities Facing</label>
            </value>
            <value>
                <fullName>Back Side Facing</fullName>
                <isActive>false</isActive>
                <label>Back Side Facing</label>
            </value>
            <value>
                <fullName>City Facing</fullName>
                <isActive>false</isActive>
                <label>City Facing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>